--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <header>
     <!-- Fixed navbar -->
-    <div class="navbar navbar-dark bg-info mb-5">
+    <div class="navbar navbar-dark bg-dark mb-5">
       <div class="container">
         <a href="#" class="navbar-brand">B&amp;W Photo App</a>
       </div>
@@ -42,10 +42,10 @@
     <h4 class="text-center my3">Filters</h4>
 
     <div id="effects">
-      <div class="btn-group btn-group-sm">
         <button class="filter-btn btn-classic btn btn-secondary">Classic Look</button>
         <button class="filter-btn btn-sin-city btn btn-secondary">Sin City</button>
-      </div>
+        <button class="filter-btn btn btn-secondary" id="revert">Revert</button>
+        <button class="filter-btn btn btn-secondary" id="download">Download</button>
     </div>
   </div>
 
